# openGJK

.github/workflows/: ccpp.yml
examples/python/: build_ctypes.sh  opengjkct.py  pyopenGJK.cpp  test.py
lib/src/: CMakeLists.txt  build.sh  openGJK.c  openGJK.cpp  openGJK.hpp  pyOpenGJK.cpp  test.py  test_dolfinx.py  test_timings.py
lib/src/gcov/: gcov.sh
python/: test.py  test_timings.py
src/: openGJK.c
